SilvaExternalSources changes
============================

2.2b1 (unreleased)
------------------

- Support DateTimeFields as parameters
- update cs_toc

2.2a2 (2009-01-12)
------------------

Features Added
~~~~~~~~~~~~~~

- Added a citation external source, to replace the citation element.
  This source uses a reduced kupu popup window to provide wysiwyg
  editing of the parameters

2.2a1 (2008-11-17)
------------------

Features Added
~~~~~~~~~~~~~~

- Added a Table of Contents code source to the code source service
  this cs is intended to eventually replace to "Table of Contents"
  document element.

- Removed the Multi Table of Contents, which is superceded by the
  new "cs_toc" table of contents code source.

- The configuration of the product have been reviewed to use Grok.

Bugs Fixed
~~~~~~~~~~

- Code Sources: MultiListField values were being passed to the
  rendering script as strings instead of lists

- Remove all ``view`` in templates and use ``here`` or ``context``
  instead.

2.1
---

Features Added
~~~~~~~~~~~~~~

- Added ``install_codesources`` function to install codesources
  from the file system.

2.0.9
-----

Bugs Fixed
~~~~~~~~~~

- html entered into parameters is no lounger doubly escaped on saving
  the document.

2.0.7
-----

Features Added
~~~~~~~~~~~~~~

- added support for 'elaborate' code sources, that show their
  add/edit form in a pop-up instead of in the kupu
  toolbox. Useful when code sources have a large number of
  variables.

- component registration now done using Silva 2.0 zcml
  directives SilvaExternalSources no longer works with Silva 1.6
  or lower.

Bugs Fixed
~~~~~~~~~~

- SilvaExternalSources now depends on SilvaDocument (in
  configure.zcml) since attempting to add this product will fail
  if SilvaDocument isn't installed.

- fixed sql source "show caption" and "show table column
  headings" parameters.

- problem with checkboxfields (checked) when rendering a code
  source.
