@@ -88,6 +88,17 @@ Version of this file: $Revision: 1.6 $
     </tr>
     <tr>
       <td align="left" valign="top">
+        <div class="form-label">
+          Source is previewable in kupu
+        </div>
+      </td>
+      <td align="left" valign="top">
+        <input type="checkbox" name="previewable" 
+          tal:attributes="checked python: here.is_previewable() and 'checked' or nothing" />
+      </td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">
       </td>
       <td align="left" valign="top">
         <div class="form-element">
