@@ -4,8 +4,18 @@ SilvaExternalSources changes
 2.2b1 (unreleased)
 ------------------
 
+Features Added
+~~~~~~~~~~~~~~
+
 - Support DateTimeFields as parameters
+
 - update cs_toc
+
+- an 'is previewable in kupu' setting was added to external
+  sources.  If this is true (default), then in the kupu
+  supporting previewable external sources, the rendered
+  external source will replace the "Silva Code Source <<title>>"
+  div (which may or may not display parameters) in kupu.
 
 2.2a2 (2009-01-12)
 ------------------
